Defaults and security manager